RESOLVED FIXED192990
[WebGPU] GPUBindGroupLayout refactoring: no HashMap, and failure logging
https://bugs.webkit.org/show_bug.cgi?id=192990
Summary [WebGPU] GPUBindGroupLayout refactoring: no HashMap, and failure logging
Justin Fan
Reported 2018-12-21 11:59:47 PST
[WebGPU] GPUBindGroupLayout refactoring: no HashMap, and failure logging
Attachments
Patch (17.00 KB, patch)
2018-12-21 12:09 PST, Justin Fan
no flags
Patch (17.11 KB, patch)
2018-12-21 12:15 PST, Justin Fan
no flags
Justin Fan
Comment 1 2018-12-21 12:02:17 PST
Justin Fan
Comment 2 2018-12-21 12:09:30 PST
Justin Fan
Comment 3 2018-12-21 12:15:45 PST
WebKit Commit Bot
Comment 4 2018-12-21 12:46:12 PST
Comment on attachment 357965 [details] Patch Clearing flags on attachment: 357965 Committed r239515: <https://trac.webkit.org/changeset/239515>
WebKit Commit Bot
Comment 5 2018-12-21 12:46:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.